# mentedb

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  VISION.md  cargo_errors.txt  docker-compose.yml  release-please-config.json  release-plz.toml  release.toml  test_context_embeddings.py  test_pipeline_audit.py
.github/: copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml
.github/workflows/: ci.yml  publish-sdks.yml  release-please.yml  release-plz.yml  release.yml
benchmarks/: README.md  VS_MEM0.md  attention_budget.py  candle_vs_openai.py  delta_savings.py  harness.py  learn_manage.py  learn_manage_scale.py  learn_manage_vs_mem0.py  learn_manage_vs_mem0_deep.py  learn_manage_vs_mem0_hard.py  learn_manage_vs_mem0_lme.py  learn_manage_vs_mem0_stress.py  mem0_comparison.py  noise_ratio.py  requirements.txt  run_all.py  scale_10k.py  stale_belief.py  sustained_conversation.py
benchmarks/longmemeval/: .gitignore  README.md  clean.sh  diagnose_failures.py  download_data.py  dry_run.py  evaluate.py  evaluate_all.py  pre_extract.py  (+4 more)
crates/mentedb/: CHANGELOG.md  Cargo.toml
crates/mentedb-cli/: CHANGELOG.md  Cargo.toml
crates/mentedb-cli/src/: main.rs
crates/mentedb-cognitive/: CHANGELOG.md  Cargo.toml
crates/mentedb-cognitive/benches/: speculative_bench.rs
crates/mentedb-cognitive/src/: entity.rs  interference.rs  lib.rs  llm.rs  pain.rs  phantom.rs  speculative.rs  stream.rs  trajectory.rs  write_inference.rs
crates/mentedb-cognitive/tests/: integration.rs
crates/mentedb-consolidation/: CHANGELOG.md  Cargo.toml
crates/mentedb-consolidation/src/: archival.rs  compression.rs  consolidation.rs  decay.rs  extraction.rs  forget.rs  lib.rs
crates/mentedb-consolidation/tests/: integration.rs
crates/mentedb-context/: CHANGELOG.md  Cargo.toml
crates/mentedb-context/src/: assembler.rs  budget.rs  delta.rs  layout.rs  lib.rs  serializer.rs
crates/mentedb-context/tests/: integration.rs
crates/mentedb-core/: CHANGELOG.md  Cargo.toml
crates/mentedb-core/src/: agent.rs  config.rs  conflict.rs  edge.rs  error.rs  event.rs  lib.rs  limits.rs  memory.rs  metrics.rs  mvcc.rs  space.rs  text.rs  tier.rs  types.rs
crates/mentedb-core/tests/: integration.rs
crates/mentedb-embedding/: CHANGELOG.md  Cargo.toml
crates/mentedb-embedding/src/: bedrock_provider.rs  cache.rs  candle_provider.rs  hash_provider.rs  http_provider.rs  lib.rs  manager.rs  provider.rs
crates/mentedb-embedding/tests/: integration.rs
crates/mentedb-extraction/: CHANGELOG.md  Cargo.toml
crates/mentedb-extraction/src/: cognitive_adapter.rs  config.rs  error.rs  lib.rs  pipeline.rs  prompts.rs  provider.rs  schema.rs
crates/mentedb-extraction/tests/: integration_tests.rs  llm_accuracy.rs
crates/mentedb-graph/: CHANGELOG.md  Cargo.toml
crates/mentedb-graph/src/: belief.rs  contradiction.rs  csr.rs  lib.rs  manager.rs  traversal.rs
crates/mentedb-graph/tests/: integration.rs
crates/mentedb-index/: CHANGELOG.md  Cargo.toml
crates/mentedb-index/src/: bitmap.rs  bm25.rs  hnsw.rs  lib.rs  manager.rs  salience.rs  temporal.rs
crates/mentedb-index/tests/: integration.rs
crates/mentedb-query/: CHANGELOG.md  Cargo.toml
crates/mentedb-query/src/: ast.rs  lexer.rs  lib.rs  mql.rs  parser.rs  planner.rs
crates/mentedb-query/tests/: integration.rs
crates/mentedb-replication/: Cargo.toml
crates/mentedb-replication/src/: cluster.rs  config.rs  lib.rs  network.rs  raft_node.rs  sharding.rs  store.rs
crates/mentedb-server/: CHANGELOG.md  Cargo.toml  build.rs  grafana-dashboard.json
crates/mentedb-server/proto/: mentedb.proto
crates/mentedb-server/src/: auth.rs  cluster.rs  console.rs  error.rs  extraction_queue.rs  grpc.rs  handlers.rs  lib.rs  main.rs  maintenance.rs  metrics.rs  rate_limit.rs  router.rs  routes.rs  state.rs  websocket.rs
crates/mentedb-server/tests/: extraction_integration.rs  integration.rs
crates/mentedb-storage/: CHANGELOG.md  Cargo.toml
crates/mentedb-storage/src/: backup.rs  buffer.rs  engine.rs  lib.rs  lock.rs  page.rs  wal.rs
crates/mentedb-storage/tests/: integration.rs
crates/mentedb/benches/: context_assembly.rs  insert_throughput.rs  similarity_search.rs  storage_bench.rs
crates/mentedb/examples/: basic_usage.rs  cognitive_features.rs  context_assembly.rs  token_efficiency.rs
crates/mentedb/src/: calibration.rs  enrichment.rs  export.rs  injection.rs  lib.rs  llm_consolidation.rs  mmr.rs  process_turn.rs  reranker.rs  sharding.rs
crates/mentedb/src/sharding/: gossip.rs  placement.rs
crates/mentedb/tests/: action_rules.rs  agent_isolation.rs  forget_durability.rs  integration.rs  memory_dedup.rs  process_turn.rs  realistic.rs  retrieval_stack.rs  scenarios.rs  snapshot_amortization.rs  standing_rules.rs  supersession_history.rs  user_isolation.rs  value_update.rs
dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
docs/: BUILD_AN_AGENT.md  CLOUD.md  HORIZONTAL_SCALE.md  SELF_HOSTING.md
observability/: README.md  docker-compose.yml  prometheus.yml
scripts/: sync-sdk-versions.sh
sdks/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
sdks/python/integrations/crewai/: README.md  pyproject.toml
sdks/python/integrations/crewai/mentedb_crewai/: __init__.py  memory.py  tool.py
sdks/python/integrations/langchain/: README.md  pyproject.toml
sdks/python/integrations/langchain/mentedb_langchain/: __init__.py  chat_history.py  memory.py  retriever.py
sdks/python/integrations/langchain/tests/: test_memory.py
sdks/python/python/mentedb/: __init__.py  _internal.py  client.py  hosted.py  reranker.py  types.py
sdks/python/src/: lib.rs
sdks/python/tests/: test_basic.py  test_cognitive.py  test_hosted.py  test_relate_integration.py
sdks/typescript/: .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/__tests__/: basic.test.ts
sdks/typescript/npm/: client.ts  index.ts  types.ts
sdks/typescript/src/: lib.rs
(+20 files in other folders)
