[workspace]
exclude = ["sdks/typescript"]
members = [
    "crates/mentedb",
    "crates/mentedb-core",
    "crates/mentedb-storage",
    "crates/mentedb-index",
    "crates/mentedb-graph",
    "crates/mentedb-query",
    "crates/mentedb-context",
    "crates/mentedb-server",
    "crates/mentedb-cognitive",
    "crates/mentedb-consolidation",
    "crates/mentedb-embedding",
    "crates/mentedb-extraction",
    "crates/mentedb-replication",
]
resolver = "2"

[workspace.package]
version = "0.7.1"
edition = "2024"
authors = ["Nam Rodriguez <nambok@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/nambok/mentedb"
description = "A purpose-built database engine for AI agent memory"

[workspace.dependencies]
# Core
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
bytes = "1"
bytemuck = { version = "1", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Collections & Data Structures
roaring = "0.10"
ahash = "0.8"
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-utils = "0.8"
smallvec = "1"

# Compression
lz4_flex = "0.11"

# Hashing & Checksums
crc32fast = "1"
fs2 = "0.4"

# Testing
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal crates
mentedb = { path = "crates/mentedb", version = "0.7.1" }
mentedb-core = { path = "crates/mentedb-core", version = "0.7.1" }
mentedb-storage = { path = "crates/mentedb-storage", version = "0.7.1" }
mentedb-index = { path = "crates/mentedb-index", version = "0.7.1" }
mentedb-graph = { path = "crates/mentedb-graph", version = "0.7.1" }
mentedb-query = { path = "crates/mentedb-query", version = "0.7.1" }
mentedb-context = { path = "crates/mentedb-context", version = "0.7.1" }
mentedb-server = { path = "crates/mentedb-server", version = "0.3.1" }
mentedb-cognitive = { path = "crates/mentedb-cognitive", version = "0.7.1" }
mentedb-consolidation = { path = "crates/mentedb-consolidation", version = "0.7.1" }
mentedb-embedding = { path = "crates/mentedb-embedding", version = "0.7.1" }
mentedb-extraction = { path = "crates/mentedb-extraction", version = "0.7.1" }
