[package]
name = "mentedb-cognitive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cognitive memory features for MenteDB"
readme = "../../README.md"
keywords = ["database", "cognitive", "ai", "agent", "memory"]
categories = ["database-implementations", "algorithms"]

[dependencies]
mentedb-core = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.docs.rs]
all-features = true
