[package]
name = "mentedb-consolidation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory consolidation and intelligence pipeline for MenteDB"
readme = "../../README.md"
keywords = ["database", "consolidation", "ai", "agent", "memory"]
categories = ["database-implementations", "algorithms"]

[dependencies]
mentedb-core = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
ahash = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.docs.rs]
all-features = true
