[package]
name = "mentedb-context"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Context assembly engine for MenteDB"

[dependencies]
mentedb-core = { workspace = true }
mentedb-index = { workspace = true }
mentedb-graph = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
