[package]
name = "mentedb-context"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Context assembly engine for MenteDB"

[dependencies]
mentedb-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
