[package]
name = "mentedb-context"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Context assembly engine for MenteDB"
readme = "../../README.md"
keywords = ["database", "context", "ai", "agent", "memory"]
categories = ["database-implementations"]

[dependencies]
mentedb-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
