[package]
name = "mentedb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core data types for MenteDB"

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
bytemuck = { workspace = true }
smallvec = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
