[package]
name = "mentedb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core data types for MenteDB"
readme = "../../README.md"
keywords = ["database", "ai", "agent", "memory", "types"]
categories = ["database-implementations", "data-structures"]

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
bytemuck = { workspace = true }
smallvec = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }

[package.metadata.docs.rs]
all-features = true
