[package]
name = "mentedb-embedding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedding model integration for MenteDB"
readme = "../../README.md"
keywords = ["database", "embedding", "ai", "vector", "memory"]
categories = ["database-implementations", "algorithms"]

[dependencies]
mentedb-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ureq = { version = "3", features = ["json"], optional = true }

[features]
default = []
http = ["ureq"]

[dev-dependencies]
uuid = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[package.metadata.docs.rs]
all-features = true
