[package]
name = "mentedb-embedding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedding model integration for MenteDB"
readme = "../../README.md"
keywords = ["database", "embedding", "ai", "vector", "memory"]
categories = ["database-implementations", "algorithms"]

[dependencies]
mentedb-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ureq = { version = "3", features = ["json"], optional = true }
candle-core = { version = "0.11", optional = true }
candle-nn = { version = "0.11", optional = true }
candle-transformers = { version = "0.11", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock"] }

[features]
default = []
http = ["ureq"]
local = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
# Native AWS Bedrock (Amazon Titan) embeddings via a lightweight sync ureq call
# plus a hand-rolled SigV4 signer (no heavy async AWS SDK).
bedrock = ["ureq", "sha2", "hmac", "chrono"]

[dev-dependencies]
uuid = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[package.metadata.docs.rs]
all-features = true
