[package]
name = "mentedb-extraction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM-powered memory extraction engine for MenteDB"
readme = "../../README.md"
keywords = ["database", "extraction", "ai", "llm", "memory"]
categories = ["database-implementations", "algorithms"]

[dependencies]
mentedb-core = { workspace = true }
mentedb-cognitive = { workspace = true }
mentedb-embedding = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.13", optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock"] }

[features]
default = []
# Native AWS Bedrock (Anthropic Claude) LLM extraction via an async reqwest call
# signed with a hand-rolled SigV4 signer (no heavy async AWS SDK). Mirrors the
# mentedb-embedding `bedrock` feature and reuses its AwsCredentials loader.
bedrock = ["dep:sha2", "dep:hmac", "dep:chrono", "mentedb-embedding/bedrock"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[package.metadata.docs.rs]
all-features = true
