[package]
name = "mentedb-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Knowledge graph engine for MenteDB"
readme = "../../README.md"
keywords = ["database", "graph", "knowledge", "ai", "agent"]
categories = ["database-implementations", "data-structures"]

[dependencies]
mentedb-core = { workspace = true }
smallvec = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
tempfile = { workspace = true }
