[package]
name = "mentedb-index"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Index structures for MenteDB"
readme = "../../README.md"
keywords = ["database", "index", "search", "ai", "memory"]
categories = ["database-implementations", "algorithms", "data-structures"]

[dependencies]
mentedb-core = { workspace = true }
roaring = { workspace = true }
ahash = { workspace = true }
bytemuck = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = "0.9"

[dev-dependencies]
rand = "0.9"
tempfile = { workspace = true }
uuid = { workspace = true }

[package.metadata.docs.rs]
all-features = true
