[package]
name = "mentedb-query"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MQL parser and query execution engine for MenteDB"
readme = "../../README.md"
keywords = ["database", "query", "parser", "ai", "agent"]
categories = ["database-implementations"]

[dependencies]
mentedb-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
