[package]
name = "mentedb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Storage engine for MenteDB"
readme = "../../README.md"
keywords = ["database", "storage", "engine", "ai", "memory"]
categories = ["database-implementations"]

[dependencies]
mentedb-core = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
crc32fast = { workspace = true }
lz4_flex = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
fs2 = { workspace = true }
bincode = "1"

# Cross-host single-writer lock (fcntl byte-range locks are enforced across
# hosts on NFSv4/EFS, unlike flock). Unix only; Windows keeps fs2/flock, which
# is fine there since the multi-host EFS case is Linux.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.docs.rs]
all-features = true
