[package]
name = "mentedb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MenteDB — The Mind Database for AI Agents"

[dependencies]
mentedb-core = { workspace = true }
mentedb-storage = { workspace = true }
mentedb-index = { workspace = true }
mentedb-graph = { workspace = true }
mentedb-query = { workspace = true }
mentedb-context = { workspace = true }
