[package]
name = "mentedb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The mind database for AI agents"

[dependencies]
mentedb-core = { workspace = true }
mentedb-storage = { workspace = true }
mentedb-index = { workspace = true }
mentedb-graph = { workspace = true }
mentedb-query = { workspace = true }
mentedb-context = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
uuid = { workspace = true }
mentedb-cognitive = { workspace = true }
mentedb-consolidation = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false
