[package]
name = "mentedb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A purpose-built database engine for AI agent memory"
readme = "../../README.md"
keywords = ["database", "ai", "agent", "memory", "cognitive"]
categories = ["database-implementations"]

[dependencies]
mentedb-core = { workspace = true }
mentedb-storage = { workspace = true }
mentedb-index = { workspace = true }
mentedb-graph = { workspace = true }
mentedb-query = { workspace = true }
mentedb-context = { workspace = true }
mentedb-embedding = { workspace = true }
mentedb-cognitive = { workspace = true }
mentedb-consolidation = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "insert_throughput"
harness = false

[[bench]]
name = "similarity_search"
harness = false

[[bench]]
name = "context_assembly"
harness = false

[package.metadata.docs.rs]
all-features = true
