[project]
name = "mentedb-crewai"
version = "0.1.1"
description = "MenteDB integration for CrewAI and AutoGen"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "mentedb>=0.7.0",
    "crewai>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
