[project]
name = "mentedb-langchain"
version = "0.1.0"
description = "MenteDB integration for LangChain and LangGraph"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "mentedb>=0.1.0",
    "langchain-core>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
